fix fb comments background in dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -2379,6 +2379,11 @@ html.large-fontsize, .fontsize-previews .large-fontsize {
     padding: 14px;
 }
 
+/* fb comments */
+
+.dark-mode .fb-comments {
+  background-color: #ffffff;
+}
 
 /* Pretplata stuff */
 
